[package]
name = "programming_habit_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
eframe = "0.27.2"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
